--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -58,7 +58,7 @@
             android:layout_width="311dp"
             android:layout_height="325dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/seven_card" />
+            android:src="@drawable/card_1" />
 
         <TextView
             android:id="@+id/textView"
